# cat991a

./: README.md  pyproject.toml
cat991a/: __init__.py  cat.py  cli.py  config.py
tests/: test_cat.py  test_cli.py
